infra/kubernetes/deployment-homolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meus-apps-frontend-homolog
  namespace: meus-apps-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meus-apps-frontend-homolog
  template:
    metadata:
      labels:
        app: meus-apps-frontend-homolog
    spec:
      containers:
        - name: meus-apps-frontend-homolog-container
          image: ghcr.io/oondemand/meus-apps-frontend:${IMAGE_TAG}-homolog
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "4096Mi"
              cpu: "4"
