infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meus-apps-frontend
  namespace: meus-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meus-apps-frontend
  template:
    metadata:
      labels:
        app: meus-apps-frontend
    spec:
      containers:
        - name: meus-apps-frontend-container
          image: ghcr.io/oondemand/meus-apps-frontend:${IMAGE_TAG}-prod
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.05"
            limits:
              memory: "128Mi"
              cpu: "0.1"
