infra/kubernetes/service-homolog.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-oondemand-frontend-service
  namespace: central-oondemand
spec:
  type: NodePort
  selector:
    app: central-oondemand-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
