infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meus-apps-frontend-service
  namespace: meus-apps
spec:
  type: NodePort
  selector:
    app: meus-apps-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
