infra/kubernetes/ingress-homolog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meus-apps-frontend-homolog-ingress
  namespace: central-oondemand-homolog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homolog.app1.central.oondemand.online
      secretName: app-tls
  rules:
    - host: homolog.app1.central.oondemand.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meus-apps-frontend-homolog-service
                port:
                  number: 80
